Standardize error messages using ValidationMessages utility class
## Summary
- Replace all hardcoded IllegalArgumentException messages with ValidationMessages utility methods
- Add new validation message types: cannotBeEmpty(), cannotBeBlank()
- Implement consistent error message formatting across domain, application, and adapter layers
- Update test cases to match new standardized message formats

## Changes Made
- **ValidationMessages.java**: Added CANNOT_BE_EMPTY, CANNOT_BE_BLANK constants and utility methods
- **Domain Events** (5 files): Standardized null/empty validation messages
- **Domain Entities/Aggregates** (6 files): Replaced hardcoded validation messages
- **Application Commands/Queries** (13 files): Unified validation error messages
- **Adapter Layer** (5 files): Standardized persistence and external service validation
- **Tests**: Updated 35+ test files to match new message formats

## Impact
- Improved consistency in error message formatting
- Enhanced maintainability through centralized message management
- Reduced code duplication in validation logic
- Better user experience with standardized error messages

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>